Add download CV button and project images

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="flex flex-col md:flex-row items-center gap-12">
       <!-- Foto Profil -->
       <div class="relative">
-        <img src="foto/gambar2.jpeg" alt="Muhammad Ahsan"
+        <img src="foto/ahsan.jpeg" alt="Muhammad Ahsan"
           class="w-56 h-56 md:w-64 md:h-64 rounded-xl object-cover border-4 border-white shadow-lg" />
         <div class="absolute -bottom-2 -right-2 bg-indigo-600 text-white text-xs font-bold px-3 py-1 rounded-full">
           Full-stack Developer
@@ -148,28 +148,69 @@
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- Project 1 -->
-      <a href="project.html#one-school" class="block bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition">
-        <h3 class="font-bold text-lg text-indigo-700">One School E-Report</h3>
-        <p class="text-gray-600 mt-2">Real-time school reporting with status tracking.</p>
+      <a href="project.html#one-school"
+        class="block bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-md transition">
+
+        <!-- Project Image -->
+        <img src="foto/ERepor.png" alt="One School E-Report" class="w-full h-44 object-cover" />
+
+        <!-- Project Content -->
+        <div class="p-6">
+          <h3 class="font-bold text-lg text-indigo-700">
+            One School E-Report
+          </h3>
+          <p class="text-gray-600 mt-2">
+            Real-time school reporting with status tracking.
+          </p>
+        </div>
+
       </a>
 
       <!-- Project 2 -->
-      <a href="project.html#psychology" class="block bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition">
-        <h3 class="font-bold text-lg text-indigo-700">M-Ahsan Psychology</h3>
-        <p class="text-gray-600 mt-2">HIPAA-compliant teletherapy for U.S. clients.</p>
+      <a href="project.html#psychology"
+        class="block bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-md transition">
+
+        <!-- Project Image -->
+        <img src="foto/Psikolog.png" alt="M-Ahsan Psychology" class="w-full h-44 object-cover" />
+
+        <!-- Project Content -->
+        <div class="p-6">
+          <h3 class="font-bold text-lg text-indigo-700">
+            M-Ahsan Psychology
+          </h3>
+          <p class="text-gray-600 mt-2">
+            HIPAA-compliant teletherapy for U.S. clients.
+          </p>
+        </div>
+
       </a>
+
 
       <!-- Project 3 -->
-      <a href="project.html#prime-edge" class="block bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition">
-        <h3 class="font-bold text-lg text-indigo-700">Prime Edge Digital</h3>
-        <p class="text-gray-600 mt-2">Corporate site that boosted client leads by 40%.</p>
+      <a href="project.html#prime-edge"
+        class="block bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-md transition">
+
+        <!-- Project Image -->
+        <img src="foto/primeEdge .png" alt="Prime Edge Digital" class="w-full h-44 object-cover" />
+
+        <!-- Project Content -->
+        <div class="p-6">
+          <h3 class="font-bold text-lg text-indigo-700">
+            Prime Edge Digital
+          </h3>
+          <p class="text-gray-600 mt-2">
+            Corporate site that boosted client leads by 40%.
+          </p>
+        </div>
       </a>
     </div>
-
-    <div class="text-center mt-10">
-      <a href="project.html" class="text-indigo-600 font-medium hover:underline">View all projects →</a>
-    </div>
-  </section>
+    
+      <div class="mt-10">
+        <a href="project.html" class="block w-fit mx-auto text-indigo-600 font-medium hover:underline">
+          View all projects →
+        </a>
+      </div>
+ </section>
 
   <!-- What Clients Say -->
   <section class="px-4 py-20 bg">
@@ -186,7 +227,7 @@
         <p class="text-gray-700 italic mb-4">
           “The E-Report system transformed how we handle student issues — fast, secure, and transparent.”
         </p>
-        <div class="font-bold">Ustadz Yusuf</div>
+        <div class="font-bold">Ustadz Faris</div>
         <div class="text-gray-500 text-sm">One School, Jakarta</div>
       </div>
 
@@ -204,7 +245,7 @@
         <p class="text-gray-700 italic mb-4">
           “Our agency’s new website increased leads by 40% in 3 months. Worth every penny.”
         </p>
-        <div class="font-bold">Sarah Kim</div>
+        <div class="font-bold">Kenzie Ahmad</div>
         <div class="text-gray-500 text-sm">CTO, Prime Edge Digital</div>
       </div>
     </div>
@@ -272,7 +313,7 @@
               <i class="fab fa-instagram text-xl"></i>
             </a>
           </div>
-<!------------------------------------------------>
+          <!------------------------------------------------>
           <!-- Download CV (Secondary Action) -->
           <div class="mt-6 text-center">
             <a href="cv/Muhammad-Ahsan-CV.pdf" download
