Add download CV button and project images

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             One School E-Report
           </h3>
           <p class="text-gray-600 mt-2">
-            Real-time school reporting with status tracking.
+            A real-time school reporting platform with status tracking designed to improve transparency, streamline workflows, and accelerate issue resolution.
           </p>
         </div>
 
@@ -179,7 +179,7 @@
             M-Ahsan Psychology
           </h3>
           <p class="text-gray-600 mt-2">
-            HIPAA-compliant teletherapy for U.S. clients.
+            A HIPAA-compliant teletherapy platform providing secure, confidential mental health services for clients across the United States.
           </p>
         </div>
 
@@ -199,12 +199,12 @@
             Prime Edge Digital
           </h3>
           <p class="text-gray-600 mt-2">
-            Corporate site that boosted client leads by 40%.
+            A high-performing corporate website designed to boost brand presence and drive a 40% increase in client leads.
           </p>
         </div>
       </a>
     </div>
-    
+
       <div class="mt-10">
         <a href="project.html" class="block w-fit mx-auto text-indigo-600 font-medium hover:underline">
           View all projects →
