--- a/index.html
+++ b/index.html
@@ -114,11 +114,6 @@
         </div>
 
         <div class="flex items-center gap-2">
-          <i class="fab fa-node-js text-2xl text-green-600"></i>
-          <span>Node.js</span>
-        </div>
-
-        <div class="flex items-center gap-2">
           <i class="fab fa-js text-2xl text-yellow-500"></i>
           <span>JavaScript</span>
         </div>
@@ -131,6 +126,22 @@
         <span class="flex items-center gap-1 px-2 py-1 rounded bg-gray-200 text-gray-800">
           <i class="fab fa-bootstrap"></i> Bootstrap
         </span>
+
+        <div class="flex items-center gap-2">
+          <i class="fab fa-node-js text-2xl text-green-600"></i>
+          <span>Node.js</span>
+        </div>
+
+        <div class="flex items-center gap-2">
+          <i class="fas fa-database text-2xl text-blue-600"></i>
+          <span>MySQL</span>
+        </div>
+
+        <div class="flex items-center gap-2">
+          <i class="fas fa-fire text-2xl text-orange-500"></i>
+          <span>Firebase</span>
+        </div>
+
       </div>
     </div>
   </section>
@@ -160,7 +171,8 @@
             One School E-Report
           </h3>
           <p class="text-gray-600 mt-2">
-            A real-time school reporting platform with status tracking designed to improve transparency, streamline workflows, and accelerate issue resolution.
+            A real-time school reporting platform with status tracking designed to improve transparency, streamline
+            workflows, and accelerate issue resolution.
           </p>
         </div>
 
@@ -179,7 +191,8 @@
             M-Ahsan Psychology
           </h3>
           <p class="text-gray-600 mt-2">
-            A HIPAA-compliant teletherapy platform providing secure, confidential mental health services for clients across the United States.
+            A HIPAA-compliant teletherapy platform providing secure, confidential mental health services for clients
+            across the United States.
           </p>
         </div>
 
@@ -199,18 +212,19 @@
             Prime Edge Digital
           </h3>
           <p class="text-gray-600 mt-2">
-            A high-performing corporate website designed to boost brand presence and drive a 40% increase in client leads.
+            A high-performing corporate website designed to boost brand presence and drive a 40% increase in client
+            leads.
           </p>
         </div>
       </a>
     </div>
 
-      <div class="mt-10">
-        <a href="project.html" class="block w-fit mx-auto text-indigo-600 font-medium hover:underline">
-          View all projects →
-        </a>
-      </div>
- </section>
+    <div class="mt-10">
+      <a href="project.html" class="block w-fit mx-auto text-indigo-600 font-medium hover:underline">
+        View all projects →
+      </a>
+    </div>
+  </section>
 
   <!-- What Clients Say -->
   <section class="px-4 py-20 bg">
