--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <div class="flex flex-col md:flex-row items-center gap-12">
       <!-- Foto -->
       <div class="flex justify-center md:justify-start">
-        <img src="https://mahsan-portfolioweb.vercel.app/gambar2.jpeg" alt="Muhammad Ahsan"
+        <img src="foto/ahsan.jpeg" alt="Muhammad Ahsan"
           class="w-48 h-48 md:w-60 md:h-60 rounded-2xl object-cover border-2 border-gray-200 shadow-lg" />
       </div>
 
@@ -75,8 +75,7 @@
             <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">HTML & CSS</span>
             <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">Tailwind CSS</span>
             <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">JavaScript</span>
-            <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">Vue.js</span>
-            <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">React</span>
+            <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">Bootstrap</span>
             <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">Node.js</span>
             <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">Firebase</span>
             <span class="px-3 py-1 bg-indigo-50 text-indigo-700 text-sm font-medium rounded-full">MySQL</span>
