--- a/project.html
+++ b/project.html
@@ -32,8 +32,8 @@
       <nav class="flex space-x-8">
         <a href="index.html" class="text-gray-700 hover:text-primary font-medium">Home</a>
         <a href="project.html" class="text-primary font-medium border-b-2 border-primary">Projects</a>
-        <a href="https://bento.me/muhammad-ahsan" target="_blank"
-          class="text-gray-700 hover:text-primary font-medium">Contact</a>
+        <a href="https://ahsanlinktree.framer.website/" target="_blank"
+          class="text-gray-700 hover:text-primary font-medium">Contact </a>
       </nav>
     </div>
   </header>
@@ -153,7 +153,7 @@
   <!------------------------------------------------->
   <!-- Footer -->
   <footer class="px-4 py-10 text-center text-gray-500 text-sm">
-    &copy; 2025 Muhammad Ahsan. Crafted with care in HTML & Tailwind CSS.
+    &copy; 2026 Muhammad Ahsan. Crafted with care in HTML & Tailwind CSS.
   </footer>
 </body>
 
