--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
 
   <div>
     <h3 class="font-semibold">Vocational High School (Software Engineering)</h3>
-    <p class="text-indigo-600 text-sm">2021 - 2024</p>
+    <p class="text-indigo-600 text-sm">IDN Boarding School | 2025 - 2028</p>
     <p class="mt-2 text-gray-600">
       Studied web development, programming fundamentals, and database management.
     </p>
